# Navicat-Linux

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README.zh-CN.md  docker-compose.yaml  start.sh
common/: exception.hpp  resource_wrapper.hpp  rsa_cipher.cpp  rsa_cipher.hpp
common/exceptions/: unix_exception.hpp
common/resource_traits/keystone/: keystone_alloc.hpp  keystone_handle.hpp
common/resource_traits/unicorn/: unicorn_alloc.hpp
common/resource_traits/unix_os/: file_descriptor.hpp  map_view.hpp
doc/: README.md  how-to-build.md  how-to-build.zh-CN.md  how-to-use.md  how-to-use.zh-CN.md
navicat-keygen/: CollectInformation.cpp  GenerateLicense.cpp  base32_rfc4648.cpp  base32_rfc4648.hpp  base64_rfc4648.cpp  base64_rfc4648.hpp  main.cpp  navicat_serial_generator.cpp  navicat_serial_generator.hpp
navicat-patcher/: amd64_emulator.cpp  amd64_emulator.hpp  elf64_interpreter.cpp  elf64_interpreter.hpp  keystone_assembler.cpp  keystone_assembler.hpp  main.cpp  memory_utility.hpp  patch_solution_since_16.0.7.0.cpp  patch_solution_since_16.0.7.0.hpp
